Correction in style.css for wrong position and created js logic for movement

--- a/Growing_Content/style.css
+++ b/Growing_Content/style.css
@@ -29,15 +29,15 @@ h1 {
   border-radius: 10px;
   box-shadow: 10px 12px 5px rgba(35, 35, 35, 0.3);
   transform: translateX(400%);
-  transition: transform 0.5s ease-in;
-}
-
-.box.show {
-  transform: translateX(0);
+  transition: transform 0.5s ease;
 }
 
 .box:nth-of-type(even) {
   transform: translateX(-400%);
+}
+
+.box.show {
+  transform: translateX(0);
 }
 
 b {
